testutil/src/snapshots/testutil__pr_body_generation_v2.snap
---
source: testutil/src/lib.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
[gherrit] Branch feature-stack is MANAGED. Syncing stack...
[gherrit] [WARN] Using custom GitHub API URL: [MOCK_SERVER_URL]
[gherrit] Pushing chunk to remote...
[gherrit] Queued update for PR #1: https://github.com/owner/repo/pull/1
[gherrit] Queued update for PR #2: https://github.com/owner/repo/pull/2
[gherrit] Queued update for PR #3: https://github.com/owner/repo/pull/3
[gherrit] Updating batch of 3 PRs...
[gherrit] Batch update complete.
[gherrit] Successfully synced 3 commits.
