testutil/src/snapshots/testutil__pre_push_failure_broken_remote.snap
---
source: testutil/src/lib.rs
expression: content
---
EXIT_CODE: 1

STDOUT:
(empty)

STDERR:
[gherrit] Branch feature-fail is MANAGED. Syncing stack...
[gherrit] [WARN] Using custom GitHub API URL: [MOCK_SERVER_URL]
[gherrit] [WARN] Failed to fetch remote branch states: Command "git" "ls-remote" "broken-remote" "refs/heads/[GHERRIT_ID]" failed with status: exit status: 128. Stderr: fatal: '/path/to/nowhere' does not appear to be a git repository
fatal: Could not read from remote repository.

Please make sure you have the correct access rights
and the repository exists.

[gherrit] Pushing chunk to remote...
fatal: '/path/to/nowhere' does not appear to be a git repository
fatal: Could not read from remote repository.

Please make sure you have the correct access rights
and the repository exists.
[gherrit] [ERROR] `git push` failed. The remote might be ahead or changed. Run `git fetch broken-remote` to sync.
