testutil/src/snapshots/testutil__public_stack_links_public.snap
---
source: testutil/src/lib.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
[gherrit] Branch public-feature is MANAGED. Syncing stack...
[gherrit] [WARN] Using custom GitHub API URL: [MOCK_SERVER_URL]
[gherrit] Pushing chunk to remote...
[gherrit] Queued update for PR #1: https://github.com/owner/repo/pull/1
[gherrit] Updating batch of 1 PRs...
[gherrit] Batch update complete.
[gherrit] Successfully synced 1 commits.
