testutil/src/snapshots/testutil__rebase_detection_manage.snap
---
source: testutil/src/lib.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
[gherrit] Branch feature-rebase is now managed by GHerrit in private mode.
[gherrit]   - 'git push' will sync PRs only, but will not push feature-rebase itself.
