testutil/src/snapshots/testutil__reproduce_unmanaged_sync_explicit.snap
---
source: testutil/src/lib.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
[gherrit] Branch explicit-unmanaged is UNMANAGED. Allowing standard push.
